Change description on holiday entitlement landing page
The current description is unclear. The new text helps the user to understand what this service provides before deciding to start the process

--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/calculate_your_holiday_entitlement.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/calculate_your_holiday_entitlement.govspeak.erb
@@ -7,5 +7,8 @@
 <% end %>
 
 <% content_for :body do %>
-  Calculate statutory holiday entitlement in days or hours for a full leave year or work out holiday someone is entitled to when they start or leave a job part way through a leave year.
+  Use this tool to calculate holiday entitlement for:
+
+  - a full leave year
+  - part of a leave year, if the job started or finished part way through the year
 <% end %>
