--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/calculate_your_holiday_entitlement.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/calculate_your_holiday_entitlement.govspeak.erb
@@ -11,4 +11,12 @@
 
   - a full leave year
   - part of a leave year, if the job started or finished part way through the year
+
+  ##Leave year dates
+
+  The leave year will usually be in an employee’s contract. If it isn’t, their leave year will start:
+
+  - on their first day (if the job began after 1 October 1998)
+  - on 1 October (if the job began on or before 1 October 1998)
+
 <% end %>
