--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/calculate_your_holiday_entitlement.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/calculate_your_holiday_entitlement.govspeak.erb
@@ -20,3 +20,11 @@
   - on 1 October (if the job began on or before 1 October 1998)
 
 <% end %>
+
+<% content_for :ab_body do %>
+  Use this tool to calculate holiday entitlement for:
+
+  - a full leave year
+  - part of a leave year, if the job started or finished part way through the year
+
+<% end %>
