--- a/test/fixtures/smart_answer_flows/bridge-of-death/bridge_of_death.govspeak.erb
+++ b/test/fixtures/smart_answer_flows/bridge-of-death/bridge_of_death.govspeak.erb
@@ -15,3 +15,7 @@
   These questions three
   Ere the other side he see.
 <% end %>
+
+<% content_for :ab_body do %>
+  There are some who call me Tim!
+<% end %>
