--- a/app/views/layouts/smart_answers.html.erb
+++ b/app/views/layouts/smart_answers.html.erb
@@ -11,6 +11,10 @@
   <% if is_button_position_tested_path? %>
     <%= benchmark_button_position_variant.analytics_meta_tag.html_safe %>
   <% end %>
+
+  <% if is_holiday_entitlement_tested_path? %>
+    <%= benchmark_holiday_entitlement_variant.analytics_meta_tag.html_safe %>
+  <% end %>
 <% end %>
 
 <% if should_present_new_navigation_view?(@content_item) %>
