Update student finance forms content
Apply the provided content changes, tweaking the styling to be more
consistent between the pages, and other similar pages in this flow.

--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_grant_new.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_grant_new.govspeak.erb
@@ -1,3 +1,41 @@
+<% content_for :title do %>
+  Student finance - application form
+<% end %>
+
 <% content_for :body do %>
-  You can't apply for the 2017 to 2018 academic year yet.
+  To apply for a fee grant and course grant download and fill in form PTGN.
+
+  | Academic year | Form
+  | 2017 to 2018 | [PTGN - form (PDF, 779KB)][PTGN-form]
+  | 2017 to 2018 | [PTGN - guidance notes (PDF, 615KB)][PTGN-guidance]
+
+  [PTGN-form]: http://media.slc.co.uk/sfe/1718/pt/sfe_ptgn_form_1718_d.pdf
+  [PTGN-guidance]: http://media.slc.co.uk/sfe/1718/pt/sfe_ptgn_notes_1718_d.pdf
+
+  You can apply up to 9 months after your course starts.
+
+  ##If you or your partner get benefits
+
+  You need to download and fill in [form CB1 (PDF, 82KB)][CB1-form] if
+  you or your partner gets:
+
+  * Universal Credit
+  * Income Support
+  * Income-based Jobseeker’s Allowance (JSA)
+  * Income-related Employment Support Allowance (ESA)
+  * Housing Benefit
+  * Local Housing Allowance
+
+  [CB1-form]: http://media.slc.co.uk/sfe/1718/pt/sfe_part_time_cb1_form_1718_d.pdf
+
+  ##If your circumstances have changed
+
+  You need to download and fill in [form CO2 (PDF, 87KB)][CO2-form] if
+  you’ve changed:
+
+  * your course, or left it
+  * university or college
+  * your name, address or contact details
+
+  [CO2-form]: http://media.slc.co.uk/sfe/1718/pt/sfe_part_time_co2_form_1718_d.pdf
 <% end %>
