--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/poland/uk/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/poland/uk/_opposite_sex.govspeak.erb
@@ -1,40 +1,51 @@
-Contact the [Embassy of Poland](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
+## Before you start
 
-^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Poland](/foreign-travel-advice/poland) before making any plans.
+Contact the [local register office](https://www.mswia.gov.pl/pl/form/148,Adresy-USC-w-Polsce-Addresses-of-Civil-Registry-Offices.html) or church where you want to get married to find out about local marriage laws, including what documents you’ll need.
 
-##What you need to do
+## Prove you’re free to get married
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+You need to get a CNI in the UK to prove you’re legally allowed to get married. Ask the local register office in Poland if you need to exchange it for a Polish one.
+ 
+If your partner is British, they’ll need to follow the same process to get their own CNI. If they’re not, the documents they need might be different.
 
-Contact the local registry office in Poland to find out if they accept UK-issued CNIs. If they don’t, you’ll need to get a locally-issued one.
+### Get a CNI
 
-### Get a UK-issued CNI
+To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. A CNI costs £35.
+ 
+^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)^
+ 
+You’ll need to bring [certain documents](/marriages-civil-partnerships/documents-to-take-to-the-register-office) with you to your appointment.
+ 
+Your notice will be publicly displayed in the register office for 28 days. You can collect your CNI after this if nobody registers an objection.
+ 
+If your CNI was issued in England, Wales or Northern Ireland, it will usually be valid at the town hall for 6 months. If it was issued in Scotland, it will expire after 3 months. Check with your local register office to find out how long a CNI is valid if you live in the [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)
+ 
+You’ll need to get your CNI [legalised](/get-document-legalised) (certified as genuine) by the Foreign & Commonwealth Office (FCO).
+ 
+You’ll also need to get a certified translation of your CNI. Use an [approved translator](/government/publications/translators-and-interpreters-list).
+ 
+If the register office in Poland doesn’t accept UK-issued CNIs, [make an appointment at the British embassy in Warsaw](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-warsaw/certificate-of-no-impediment/slot_picker) to exchange it for a Poland-issued one. This costs <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %>.
 
-You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](https://www.gov.uk/register-offices), [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
+### If you’ve changed your name
 
-^A CNI issued in Scotland is valid for 3 months. A CNI issued in England, Wales or Northern Ireland will not expire. Check with your local register office to find out how long a CNI is valid if you live in the Channel Islands or the Isle of Man. You should also check with the local authorities in Poland to find out how long a CNI is valid under local law.^
+If your name on any of your documents doesn’t appear exactly as it does on your birth certificate, you’ll need to provide evidence of your name change (for example, a marriage certificate or deed poll). If you don’t, the authorities may refuse to allow the marriage to go ahead.
 
-### Get a locally-issued CNI
+## Get married
 
-If the local registry office in Poland doesn’t accept UK-issued CNIs, you must make an appointment at the British embassy in Warsaw to get a locally-issued CNI.
+Give your CNI to:
+ 
+- the registrar at the town hall if you’re having a civil ceremony - at least one month before your wedding
+- the priest if you’re getting married in a church - at least 2 days before your wedding
+ 
+You’ll also need to give them a [certified copy](/order-copy-birth-death-marriage-certificate) of your birth certificate. They won’t give this back.
 
-[Make an appointment at the embassy in Warsaw.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-warsaw/certificate-of-no-impediment/slot_picker)
+## After you get married
 
-### Legalisation and translation
-
-You must check with the local authorities in Poland to see if your UK-issued CNI needs to be:
-
-- ‘[legalised](/get-document-legalised)’ (certified as genuine)
-- translated - [find a translator abroad](/government/collections/list-of-lawyers), or in the UK through the [Institute of Linguists](http://www.ciol.org.uk)
-
-You should also check with the local authorities in Poland to find out if you need to provide legalised and translated copies of any other documents.
-
-%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
-
-## What happens next
-
-If you’re getting married in a registry office, you must give them your CNI at least one month and one day before your wedding. If you’re getting married in a church, you can do this 2 days before the wedding.
-
-You will be asked to provide a copy of your birth certificate. Make sure you send a [certified copy](/order-copy-birth-death-marriage-certificate) as you won’t get it back.
-
-*[CNI]:certificate of no impediment
+Your marriage will be recognised in the UK if:
+ 
+- you follow the correct process according to the law in Poland
+- it would be allowed under UK law
+ 
+You won’t need to register your marriage in the UK.
+ 
+If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
