--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/poland/third_country/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/poland/third_country/_opposite_sex.govspeak.erb
@@ -1,18 +1,12 @@
-Contact the relevant local authorities in Poland (the local registry office or church) to find out about local marriage laws, including what documents you’ll need.
+## Before you start
 
-^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Poland](/foreign-travel-advice/poland) before making any plans.
+Contact the [local register office](https://www.mswia.gov.pl/pl/form/148,Adresy-USC-w-Polsce-Addresses-of-Civil-Registry-Offices.html) or church where you want to get married to find out about local marriage laws, including what documents you’ll need.
 
-##What you need to do
+## Prove you’re free to get married
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
-
-There are 2 ways you can get a CNI:
-
-- [go to the UK and post notice with a UK registrar](/marriage-abroad/y/poland/uk/partner_british/opposite_sex)
-- [go to Poland and post notice at the embassy or consulate there](/marriage-abroad/y/poland/ceremony_country/partner_british/opposite_sex)
-
-%If you choose to post notice, you’ll normally have to wait at least 13 days for your CNI. It can take longer depending on the local authorities’ processes and the time of year.%
-
-Contact the local registry office in Poland to find out if they accept UK-issued CNIs. If they don’t, you’ll need to get a locally-issued one.
-
-*[CNI]:Certificate of no impediment
+You need to get a CNI to prove you’re legally allowed to get married.
+ 
+You can either get a CNI in:
+ 
+- [the UK](/marriage-abroad/y/poland/uk/opposite_sex)
+- [Poland](/marriage-abroad/y/poland/ceremony_country/opposite_sex)
