--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/poland/third_country/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/poland/third_country/_same_sex.govspeak.erb
@@ -1,1 +1,1 @@
-It’s not possible to get legal recognition for your same-sex relationship in Poland.
+You can’t have a same-sex marriage or civil partnership in Poland.
