--- a/lib/smart_answer_flows/calculate-your-child-maintenance/outcomes/reduced_and_basic_rates_result.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-child-maintenance/outcomes/reduced_and_basic_rates_result.govspeak.erb
@@ -1,13 +1,13 @@
 <% content_for :body do %>
-  Based on your answers the child maintenance payment is the <%= calculator.rate_type.to_s.humanize(capitalize: false) %> rate of £<%= child_maintenance_payment %> per week.
+  Your child maintenance payment is the <%= calculator.rate_type.to_s.humanize(capitalize: false) %> rate of £<%= child_maintenance_payment %> per week.
 
-  ^This is the total weekly amount, not the amount per child.^
+  ^This is an estimate. The exact amount the Child Maintenance Service calculates may be different.^
 
-  <%= render partial: 'calculate-your-child-maintenance/disclaimer.govspeak.erb' %>
   <% if calculator.receiving? %>
     For example, if the paying parent also supports other children, the amount you receive may be less than this.
   <% end %>
 
+  ## Fees
   <% if calculator.paying? %>
     Depending on how child maintenance is arranged, fees may be added to this amount.
   <% end %>
