Content update for UK part-time grant
This commit make content update to UK part-time grant

Capitalising a few words as requested by the content designer.

--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_grant_continuing.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_grant_continuing.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :body do %>
-  To apply for a fee grant and course grant download and fill in form PTGC.
+  To apply for a Fee Grant and Course Grant download and fill in form PTGC.
 
   | Academic year | Form
   | 2017 to 2018 | [PTGC - form (PDF, 599KB)][PTGC-form]
