Content update for new UK part-time students
This commit make content update for new UK part-time students

Capitalising a few words as requested by the content designer.

--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_grant_new.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_grant_new.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :body do %>
-  To apply for a fee grant and course grant download and fill in form PTGN.
+  To apply for a Fee Grant and Course Grant download and fill in form PTGN.
 
   | Academic year | Form
   | 2017 to 2018 | [PTGN - form (PDF, 779KB)][PTGN-form]
