--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/uk/partner_local/_opposite_sex.govspeak.erb
@@ -12,12 +12,9 @@ You can normally get a CNI by giving a notice of marriage at your local register
 
 ###Legalisation and translation
 
-You might need to exchange your UK-issued CNI for one that’s valid in Romania at the nearest embassy or consulate to where you’re getting married.
+You need to exchange your UK-issued CNI for one that’s valid in Romania at the nearest embassy or consulate to where you’re getting married.
 
-You should also check if it needs to be:
-
-- ‘[legalised](/get-document-legalised)’ (certified as genuine)
-- translated - [find a translator abroad](/government/collections/list-of-lawyers), or in the UK through the [Institute of Linguists](http://www.ciol.org.uk)
+[Make an appointment to exchange your CNI at the British Embassy Bucharest](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-bucharest/exchange-a-certificate-of-no-impediment/slot_picker).
 
 You should also check with the local authorities in Romania to find out if you need to provide legalised and translated copies of any other documents.
 
