--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/romania/ceremony_country/partner_local/_opposite_sex.govspeak.erb
@@ -6,7 +6,7 @@ Contact the relevant local authorities in Romania to find out about local marria
 
 You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
 
-To get a CNI, you must post notice of your intended marriage in Romania. You can do this at the British embassy or in front of a notary public.
+To get a CNI, you must post notice of your intended marriage in Romania. You can do this at the British embassy.
 
 You’ll need to have been living in Romania for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
 
@@ -38,8 +38,6 @@ If you or your partner have been divorced, widowed or previously in a civil part
 
 The embassy will charge a fee for taking the oath, and then display your notice of marriage publicly for a further 7 days. They’ll then issue the CNI, as long as nobody has registered an objection. There’s an additional fee for this.
 
-You should check if your CNI needs to be legalised (certified as genuine) by the local authorities in Romania.
-
 ^You don't need to stay in the country while your notice is posted.^
 
 ##Naturalisation of your partner if they move to the UK
@@ -48,14 +46,13 @@ Your partner can apply to [become a British citizen](/becoming-a-british-citizen
 
 ## Fees
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-           collection: calculator.services,
-           as: :service,
-           locals: { calculator: calculator } %>
+Service | Fee
+-|-
+Receiving a notice of marriage | £50
+Issuing a CNI, Nulla Osta or equivalent | £50
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Romania](/government/publications/romania-consular-fees).
 
-<%=  render partial: 'how_to_pay.govspeak.erb',
-            locals: {calculator: calculator}%>
+You can pay by cash or credit card, but not by personal cheque.
 
 *[CNI]:certificate of no impediment
